{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 21,
  "lineage": "d9f60bbb-26ae-2541-b20e-37dede3f466b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078101540134:vpc/vpc-0bd03263e3ee19a3e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a21a6c87ce57139d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02a3fe346fa4b164c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd03263e3ee19a3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02eb011206e248e60",
            "owner_id": "078101540134",
            "tags": {
              "Name": "default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-kube-master-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078101540134:security-group/sg-09058d5ddc772cb1a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09058d5ddc772cb1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10259
              }
            ],
            "name": "petclinic-k8s-master-sec-group",
            "name_prefix": "",
            "owner_id": "078101540134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-master-secgroup"
            },
            "tags_all": {
              "Name": "kube-master-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd03263e3ee19a3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-kube-worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078101540134:security-group/sg-0e0156fdf9ceccca4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0156fdf9ceccca4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "petclinic-k8s-worker-sec-group",
            "name_prefix": "",
            "owner_id": "078101540134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-worker-secgroup"
            },
            "tags_all": {
              "Name": "kube-worker-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd03263e3ee19a3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-mutual-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078101540134:security-group/sg-04369471a3cf85b06",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04369471a3cf85b06",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8472
              }
            ],
            "name": "petclinic-k8s-mutual-sec-group",
            "name_prefix": "",
            "owner_id": "078101540134",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bd03263e3ee19a3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    }
  ]
}